# GelDosimetryAnalysis

./: CMakeLists.txt  GelDosimetryAnalysisLogic.py  GelDosimetryAnalysis_Workflow_Overview.txt  GelDosimetryAnalysis_Workflow_Step4Details.txt  GelDosimetry_Logo.xcf
ApplyPolynomialFunctionOnVolumeAlgo/: CMakeLists.txt  vtkApplyPolynomialFunctionOnVolumeAlgo.cxx  vtkApplyPolynomialFunctionOnVolumeAlgo.h
GelDosimetryAnalysis/: CMakeLists.txt  GelDosimetryAnalysis.py
GelDosimetryAnalysis/GelDosimetryAnalysisLogic/: GelDosimetryAnalysisLogic.py  LineProfileLogic.py  __init__.py
GelDosimetryAnalysis/Resources/: GelDosimetryAnalysis.qrc
GelDosimetryAnalysisAlgo/: CMakeLists.txt  GelDosimetryAnalysisLogic.py  qSlicerGelDosimetryAnalysisAlgoModule.cxx  qSlicerGelDosimetryAnalysisAlgoModule.h  qSlicerGelDosimetryAnalysisAlgoModuleWidget.cxx  qSlicerGelDosimetryAnalysisAlgoModuleWidget.h
GelDosimetryAnalysisAlgo/Logic/: CMakeLists.txt  vtkApplyPolynomialFunctionOnVolume.cxx  vtkApplyPolynomialFunctionOnVolume.h  vtkSlicerGelDosimetryAnalysisAlgoModuleLogic.cxx  vtkSlicerGelDosimetryAnalysisAlgoModuleLogic.h
GelDosimetryAnalysisAlgo/Resources/UI/: qSlicerGelDosimetryAnalysisAlgoModuleWidget.ui
GelDosimetryAnalysisLib/: CMakeLists.txt  GelDosimetryAnalysisLogic.py
GelDosimetryAnalysisLib/Logic/: CMakeLists.txt  vtkApplyPolynomialFunctionOnVolume.cxx  vtkApplyPolynomialFunctionOnVolume.h
